Final revisions for workshop :heavy_check_mark:

--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -66,4 +66,4 @@ shinyApp(ui, server)
 ## If you want to do more with leaflet and Shiny, some resources I like are:
 - Andrew Tran's [Mapping with R](https://andrewbtran.github.io/NICAR/2017/maps/leaflet-r.html)
 
-
+# Example 4
